# xrpl-trading-bot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  REPOSITORY_SETUP.md  backtest.py  check_amm_history.py  collect_amm_state_changes.py  main.py  migrate_collection_logs.py  monitor_collection.py  pyproject.toml  requirements.txt  run_backtest.sh  setup.py  setup_systemd_service.sh  start_realtime_collection.py  test_amm_connection.py  xrpl-realtime-collector.service
docs/: API.md  ARCHITECTURE.md  BACKTESTING.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  DATABASE.md  DATA_COLLECTION.md  DEPLOYMENT.md  INSTALLATION.md  PROJECT.md  PYTHON_SETUP.md  QUICK_START.md  README.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  data_collection_improvements.md
scripts/: README.md  collect_historical_data.py
scripts/data_collection/: collect_amm_history.py
scripts/visualization/: visualize_amm_history.py
src/: collect_historical_data.py
src/bot/: backtest_engine.py  trading_bot.py
src/config/: constants.py  settings.py  tokens.json
src/data/: amm_fetcher.py  external_data_sources.py  xrpl_dex_fetcher.py
src/database/: models.py  storage.py
src/exchanges/: xrpl_client.py
src/realtime/: __init__.py  amm_state_tracker.py  collection_manager.py  realtime_collector.py
src/strategies/: base.py  simple_momentum.py
src/utils/: data_fetcher.py  logger.py
tests/: test_simple_momentum.py
